--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server"
   },
-  "author": "",
+  "author": "Daniel Burbach",
   "license": "ISC",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
