--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "bootstrap": "^4.3.1",
+    "materialize-css": "^1.0.0-rc.2",
     "prop-types": "^15.5.10",
     "react": "16.3.0",
     "react-bootstrap": "^1.0.0-beta.5",
