--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "16.3.0",
     "react-materialize": "^2.6.0",
+    "react-parallax": "^2.1.0",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
     "styled-jsx": "^3.2.1"
