--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react-dom": "16.3.0",
     "react-materialize": "^2.6.0",
     "react-parallax": "^2.1.0",
+    "react-pure-grid": "^2.1.1",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
+    "react-toolbox": "^2.0.0-beta.13",
     "styled-jsx": "^3.2.1"
   },
   "devDependencies": {
