--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "16.3.0",
     "react-materialize": "^2.6.0",
     "react-parallax": "^2.1.0",
+    "react-particles-js": "^2.4.2",
     "react-pure-grid": "^2.1.1",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
