--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "styled-jsx": "^3.2.1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/preset-env": "^7.3.1",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
@@ -43,5 +45,5 @@
     "webpack": "^3.4.0",
     "webpack-dev-server": "^2.5.0"
   },
-  "description": ""
+  "description": "Personal Portfolio for Daniel Burbach"
 }
