--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "16.3.0",
     "react-materialize": "^2.6.0",
+    "react-parallax": "^2.2.0",
     "react-particles-js": "^2.4.2",
     "react-pure-grid": "^2.1.1",
     "react-router-bootstrap": "^0.24.4",
