--- a/package.json
+++ b/package.json
@@ -12,24 +12,24 @@
   "license": "ISC",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
+    "animate.css": "^3.7.0",
     "bootstrap": "^4.3.1",
     "materialize-css": "^1.0.0-rc.2",
     "prop-types": "^15.5.10",
     "react": "16.3.0",
+    "react-animated-css": "^1.0.4",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "16.3.0",
     "react-materialize": "^2.6.0",
-    "react-parallax": "^2.2.0",
     "react-particles-js": "^2.4.2",
     "react-pure-grid": "^2.1.1",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
+    "react-scroll-parallax": "^1.3.5",
     "react-toolbox": "^2.0.0-beta.13",
     "styled-jsx": "^3.2.1"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.3.0",
-    "@babel/preset-env": "^7.3.1",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
